# websockets-chat

client/: package-lock.json  package.json  tailwind.config.cjs
client/src/: App.tsx  ClientSocketContext.tsx  SocketContext.tsx  SupportSocketContext.tsx  store.ts
client/src/components/: Chat.tsx  InputFile.tsx  SelectChatHint.tsx  SideBar.tsx  Status.tsx  UploadImg.tsx
client/src/components/ui/: Input.tsx  Loading.tsx
client/src/hooks/: useClientConnection.ts  useConnection.ts  useWebSocket.ts
client/src/pages/: ClientPage.tsx  ErrorPage.tsx  Home.tsx  Login.tsx
server/: Cargo.toml  index.ts  package-lock.json  package.json  tsconfig.json
server/src/: image.rs  lib.rs  main.rs  open_ai.rs  state.rs  ws.rs
