[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.12", features = ["ws", "query"] }
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["serde_derive", "derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4"] }
